feito as paginas

--- a/style/style.css
+++ b/style/style.css
@@ -56,3 +56,18 @@ h1{
     font-size: 45pt;
     font-weight: lighter;
 }
+/*Configurando o menu*/
+/*ul{
+    list-style-type: none;
+    border:2px solid white;
+    width: 5%;
+    padding: 5px;
+    text-align: center;
+    background-color: white;
+    font-size: 15pt;
+    border-radius: 5px;
+    position: relative;
+    top:0px;
+    left: 80%;
+    color: blue;
+}*/
