nao consegui fazer salvar os dados do registro

--- a/views/ListadeCarros.html
+++ b/views/ListadeCarros.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estacionamento HT</title>
     <link rel="stylesheet" href="../style/formularios.css">
+    <script src="./../controllers/registrar.js"></script>
 </head>
 <body>
     <nav>
@@ -18,7 +19,7 @@
     <div id="corpo">
     <fieldset>
         <legend>Lista de Veículos</legend>
-        <div id="Listadeveiculos">
+        <div id="Listadeveiculos" onload="lista.construirlista()">
 
         </div>
        
